<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:fillViewport="true"
    android:background="@drawable/gradient_background"
    tools:context=".NewAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- CardView ile kart şeklinde tasarım -->
        <androidx.cardview.widget.CardView
            android:id="@+id/registerCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@android:color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/registerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/gradient_background"
                android:padding="16dp">

                <!-- Başlık EditText -->
                <EditText
                    android:id="@+id/registerHeaderEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/kayit_ol"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:background="@null"
                    android:layout_marginBottom="-10dp" />

                <!-- Alt başlık EditText -->
                <EditText
                    android:id="@+id/registerSubHeaderEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/asagidaki_bilgileri_doldurun"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:textAlignment="center" />

                <!-- Kullanıcı Adı giriş alanı -->
                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/kullanici_adi"
                    android:inputType="textPersonName"
                    android:padding="12dp" />

                <!-- E-posta giriş alanı -->
                <EditText
                    android:id="@+id/registerEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:layout_marginTop="8dp" />

                <!-- Şifre giriş alanı -->
                <EditText
                    android:id="@+id/registerPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sifre"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_background" />

                <!-- Şifreyi unuttum metni -->

                <!-- Kayıt ol butonu -->
                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#4A4256"
                    android:text="@string/kayit_ol" />

                <!-- Hesabın var mı metni -->
                <TextView
                    android:id="@+id/alreadyHaveAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\nZaten hesabınız var mı? Giriş Yap"
                    android:textColor="#8A000000"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
